[package]
name = "binary-option"
version = "0.1.0"
edition = "2018"
license = "WTFPL"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
gemachain-program = "1.8.2"
thiserror = "1.0"
gpl-token = {version = "3.1.1", path = "../../token/program", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
