[package]
name = "gpl-feature-proposal-cli"
version = "1.2.0"
description = "GPL Feature Proposal Command-line Utility"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
gemachain-clap-utils = "1.8.2"
gemachain-cli-config = "1.8.2"
gemachain-client = "1.8.2"
gemachain-logger = "1.8.2"
gemachain-sdk = "1.8.2"
gpl-feature-proposal = { version = "1.0", path = "../program", features = ["no-entrypoint"] }

[[bin]]
name = "gpl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
