[package]
name = "gpl-governance-test-sdk"
version = "0.1.0"
description = "Gemachain Program Library Governance Program Test SDK"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.127"
serde_derive = "1.0.103"
gemachain-program = "1.8.2"
gemachain-program-test = "1.8.2"
gemachain-sdk = "1.8.2"
gpl-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
