[package]
name = "gpl-memo"
version = "3.0.1"
description = "Gemachain Program Library Memo"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
gemachain-program = "1.8.2"

[dev-dependencies]
gemachain-program-test = "1.8.2"
gemachain-sdk = "1.8.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
