[package]
name = "gpl-record"
version = "0.1.0"
description = "Gemachain Program Library Record Program"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.0"
num-derive = "0.3"
num-traits = "0.2"
gemachain-program = "1.8.2"
thiserror = "1.0"

[dev-dependencies]
gemachain-program-test = "1.8.2"
gemachain-sdk = "1.8.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
