[package]
name = "stateless-asks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
gemachain-program = "1.8.2"
gpl-token = { version = "3.2", path = "../../token/program", features = ["no-entrypoint"] }
gpl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
thiserror = "1.0"

[dev-dependencies]
gemachain-program-test = "1.8.2"
gemachain-sdk = "1.8.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
