
[package]
name = "gpl-themis-ristretto-client"
version = "0.1.0"
description = "GPL THEMIS client"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[dependencies]
bincode = "1.3"
borsh = "0.9"
curve25519-dalek = {package = "curve25519-dalek-ng", git = "https://github.com/garious/curve25519-dalek", rev = "fcef1fa11b3d3e89a1abf8986386ba9ae375392c", default-features = false, features = ["borsh"]}
elgamal_ristretto = { git = "https://github.com/garious/elgamal", rev = "892dbe115104bcb8cc26d79f9676c836ff6c018e", default-features = false }
futures = "0.3"
gemachain-banks-client = "1.8.2"
gemachain-cli-config = "1.8.2"
gemachain-sdk = "1.8.2"
gpl-themis-ristretto = { version = "0.1.0", path = "../program_ristretto", features = ["no-entrypoint"] }
tarpc = { version = "0.22.0", features = ["full"] }
tokio = "0.3"
url = "2.1"

[dev-dependencies]
separator = "0.4.1"
gemachain-banks-server = "1.8.2"
gemachain-bpf-loader-program = "1.8.2"
gemachain-core = "1.8.2"
gemachain_rbpf = "0.1"
gemachain-runtime = "1.8.2"

[lib]
crate-type = ["cdylib", "lib"]
