[package]
name = "gpl-token-swap"
version = "2.1.0"
description = "Gemachain Program Library Token Swap"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
production = []
fuzz = ["arbitrary", "roots"]

[dependencies]
arrayref = "0.3.6"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
gemachain-program = "1.8.2"
gpl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
gpl-token = { version = "3.2", path = "../../token/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
arbitrary = { version = "1.1", features = ["derive"], optional = true }
roots = { version = "0.0.7", optional = true }

[dev-dependencies]
gemachain-sdk = "1.8.2"
proptest = "1.0"
sim =  { path = "./sim" }
roots = "0.0.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
