[package]
name = "gpl_token_perf_monitor"
version = "0.0.1"
description = "GPL Token performance monitor"
authors = ["Gemachain Maintainers <maintainers@gemachain.com>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"

[dev-dependencies]
rand = { version = "0.7.0"}
gpl-token = { path = "../program", features = [ "no-entrypoint" ] }
gemachain-runtime = "1.8.2"
gemachain-sdk = "1.8.2"
gemachain-bpf-loader-program = "1.8.2"
gemachain_rbpf = "0.2"

[workspace]
