[package]
name = "gpl-token"
version = "3.2.0"
description = "Gemachain Program Library Token"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
gemachain-program = "1.8.2"
thiserror = "1.0"

[dev-dependencies]
gemachain-sdk = "1.8.2"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
