[package]
name = "test-client"
version = "0.1.0"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
publish = false
edition = "2018"

# Used to ensure that GPL programs are buildable by external clients

[dependencies]
gemachain-sdk = "1.8.2"
gpl-memo = { path = "../../memo/program", features = [ "no-entrypoint" ] }
gpl-token = { path = "../../token/program", features = [ "no-entrypoint" ] }
gpl-token-swap = { path = "../../token-swap/program", features = [ "no-entrypoint" ] }
