[package]
name = "gpl-token-swap-fuzz"
version = "0.0.1"
description = "Gemachain Program Library Token Swap Fuzzer"
authors = ["Gemachain Maintainers <maintainers@gemachain.foundation>"]
repository = "https://github.com/gemachain/gemachain-program-library"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
honggfuzz = { version = "0.5.52" }
arbitrary = { version = "1.1", features = ["derive"] }
gemachain-program = "1.8.2"
gpl-math = { version = "0.1", path = "../../../libraries/math", features = [ "no-entrypoint" ] }
gpl-token = { version = "3.2", path = "../../../token/program", features = [ "no-entrypoint" ] }
gpl-token-swap = { path = "..", features = ["fuzz", "no-entrypoint"] }

[[bin]]
name = "token-swap-instructions"
path = "src/instructions.rs"
test = false
doc = false
